[package]
name = "progpow_verifier"
version = "0.1.0"
edition = "2021"
authors = ["Qian Zhang"]
description = "A Rust implementation of ProgPoW for Ethereum mining verification, based on go-ethereum."
license = "MIT"
readme = "README.md"
repository = "https://github.com/HappyFox001/progpow_rust"
[dependencies]
byteorder = "1.5.0"
